--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@
                             <p class="text-sm text-gray-400">Years Exp.</p>
                         </div>
                         <div class="text-center">
-                            <h3 class="text-3xl font-bold text-sky-400">20+</h3>
+                            <h3 class="text-3xl font-bold text-sky-400">10+</h3>
                             <p class="text-sm text-gray-400">Projects</p>
                         </div>
-                        <div class="text-center">
+                        <!-- <div class="text-center">
                             <h3 class="text-3xl font-bold text-sky-400">5+</h3>
                             <p class="text-sm text-gray-400">Clients</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="relative h-64 md:h-full flex items-center justify-center">
