--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                     <div class="h-48 flex items-center justify-center group relative overflow-hidden">
                         <img src="https://images.unsplash.com/photo-1531746020798-e6953c6e8e04?auto=format&fit=crop&w=500&q=60" alt="Personality" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
                         <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 flex items-center justify-center transition-opacity">
-                            <a href="https://github.com/Sanjaymo/Personality-Prediction-Check.git" target="_blank" rel="noopener noreferrer" class="text-white border border-white px-4 py-2 rounded hover:bg-white hover:text-black transition">View Details</a>
+                            <a href="https://personality-prediction-check-enjtcfujydzgkcn8ihcwls.streamlit.app/" target="_blank" rel="noopener noreferrer" class="text-white border border-white px-4 py-2 rounded hover:bg-white hover:text-black transition">View Details</a>
                         </div>
                     </div>
                     <div class="p-6">
