Update AWS certification details in index.html

--- a/index.html
+++ b/index.html
@@ -353,10 +353,10 @@
                     <div class="absolute top-0 right-0 p-2 opacity-10 group-hover:opacity-100 transition-opacity">
                         <i class="fa-solid fa-medal text-6xl text-orange-500"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-sky-300 mb-2">AWS Fundamentals</h3>
-                    <p class="text-gray-400 text-sm mb-4">Amazon Web Services - 2023</p>
+                    <h3 class="text-xl font-bold text-sky-300 mb-2"> AWS Cloud Practitioner</h3>
+                    <p class="text-gray-400 text-sm mb-4">Amazon Web Services - 2026</p>
                     <p class="text-gray-300 mb-6 text-sm">Cloud concepts, security, and core AWS services architecture.</p>
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="inline-block text-white bg-slate-700 hover:bg-slate-600 px-4 py-2 rounded text-sm transition-colors">View Credential</a>
+                    <a href="https://drive.google.com/file/d/18z23C23xZbSI5oXzYlX6HERAx0x69Qp1/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="inline-block text-white bg-slate-700 hover:bg-slate-600 px-4 py-2 rounded text-sm transition-colors">View Credential</a>
                 </div>
 
                 <div class="glass-card p-6 rounded-xl group relative overflow-hidden">
