Update image source to GitHub profile

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="relative h-64 md:h-full flex items-center justify-center reveal">
                     <div class="absolute inset-0 bg-gradient-to-r from-sky-500 to-purple-600 rounded-full blur-3xl opacity-20 animate-pulse"></div>
                     <div class="relative w-64 h-64 md:w-80 md:h-80 rounded-full p-2 border-2 border-dashed border-sky-400/50">
-                        <img src="sanju.png" 
+                        <img src="https://github.com/Sanjaymo.png" 
                              alt="Sanjay Choudhari" 
                              class="w-full h-full object-cover rounded-full border-4 border-slate-900 shadow-[0_0_30px_rgba(56,189,248,0.4)] hover:scale-105 transition-transform duration-500">
                     </div>
